[package]
name = "awgman"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
atomicwrites = "0.4.4"
base64 = "0.22.1"
bincode = "2.0.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.42", features = ["derive"] }
colored = { version = "3.0.0" }
crossterm = "0.29.0"
expanduser = "1.2.2"
getrandom = { version = "0.3.3", features = ["std"] }
inquire = { version = "0.7.5", default-features = false, features = ["crossterm", "macros"] }
rand = "0.9.2"
regex = "1.11.1"
russh = "0.53.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
subtle = "2.6.1"
x25519-dalek = { version = "2.0.1", features = ["serde", "static_secrets", "getrandom"] }
zeroize = { version = "1.8.1", features = ["aarch64", "serde", "simd", "std"] }

[[bin]]         
name = "awgman"

[profile.release]
lto = true
opt-level = 3
debug = 0
panic = 'abort'
incremental = false
codegen-units = 1

[profile.dev.package.argon2]
# build Argon2 optimised at dev
# so it's not painfully slow
opt-level = 3
